test/src/e2e_vm_tests/test_programs/should_pass/language/if_implicit_unit/src/main.sw
script;

fn main() {}

fn sqrt(gas_: u64, amount_: u64, coin_: b256, value: u64)-> u64  {
        let mut z:u64 = 1;
        let mut y:u64 = value;
        let x = true;
        if x {
            y = y.rsh(32);
            z = z.lsh(16);
        };
        y
}
