test/src/e2e_vm_tests/test_programs/should_fail/repeated_struct_field/src/main.sw
script;

struct E {
    x: u64,
    x: b256,
}

fn main() -> u64 {
    0
}
